MicroTodoUI/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-ui
spec:
  replicas: 5
  selector:
    matchLabels:
      app: todo-ui
  template:
    metadata:
      name: todo-ui
      labels:
        app: todo-ui
    spec:
      containers:
      - name: todo-ui
        image: acrdevtodoproject0326.azurecr.io/micro-todo-ui-api:v2
        ports:
        - containerPort: 80
